--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@ vimeo_id:
 youtube_id: 
 author:
   markup_language: :rd
-  name: Hayashi Kentaro
+  name: Kentaro Hayashi
   email: kenhys@gmail.com
   rubygems_user: kenhys
   slideshare_user: kenhys
